2008-03-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source\win32\w32_movesize.m: Bypass all existing code to send a
	resize when a window is minimised ... just call the miniaturise:
	method of the gui.  Should fix bug 22274

2008-03-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-copyWithZone:): Correct the cairo
	version #ifdef.

2008-03-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source\win32\WIN32Server.m: Improve window level code ... when moving
	a window to the top of a level, jump it right to the top of the window
	z-order so that it is above any non-gnustep windows.
	* Source\win32\w32_movesize.m: If a window is jumped to the top of the
	z-order and hence breaks the level rules, use a bubble sort to get
	the windows back in level order by raising any windows which are
	lower than they should be.
	
2008-03-05 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers\win32\WIN32Server.h: Add fields to track window level/ordering
	* Source\win32\WIN32Server.m: add code to implement window levvel/order
	management. NB. This is incomplete ... it seems that direct user action
	like clicking on a window will reorder it without going through the
	orderwindow::; method, so we need to deal with that somehow.
	* Source\win32\w32_movesize.m: Ensure that desktop level windows are
	pinned to the bottom.

2008-03-04 Xavier Glattard <xavier.glattard@online.fr>

	* configure.ac,
	  configure
	  : Display warning msgs when cairo backend is selected on win32
	* Headers/cairo/Win32CairoSurface.h,
	  Headers/cairo/Win32CairoGlitzSurface.h,
	  Source/cairo/Win32CairoSurface.m,
	  Source/cairo/Win32CairoGlitzSurface.m,
  	  Source/cairo/CairoContext.m,
  	  : Cairo and Cairo/Glitz experimental backends on win32

2008-02-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_checkStyle:): Restructure code
	for double parent handling to avoid wrong computation path. 

2008-02-25 Fred Kiefer <FredKiefer@gmx.de>
